# gator

./: .copilot-context.md  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  ACD_COMPLETION_SUMMARY.md  ACD_CONTENT_GENERATION_FIX.md  ACD_DOMAIN_MIGRATION_FIX.md  ACD_INTEGRATION_ANALYSIS.md  ACD_PHASE3_PHASE4_IMPLEMENTATION.md  ADMIN_ENHANCEMENT_SUMMARY.md  ADMIN_PANEL_FIX.md  AI_CONTENT_GENERATION_GUIDE.md  AI_IMPLEMENTATION_COMPLETE.txt  AI_MODEL_DETECTION_FIX.md  AI_MODEL_SETUP_FIXES.md  ANALYSIS_COMPARISON.md  ANALYSIS_INDEX.md  ANALYSIS_VISUAL_SUMMARY.txt  API_ENDPOINTS_SUMMARY.md  APPEARANCE_LOCKING_IMPLEMENTATION.md  BOOT_FIX_SUMMARY.md  CHANGELOG.md  CIVITAI_INTEGRATION_SUMMARY.md  COMFYUI_DETECTION_FIX_SUMMARY.md  COMFYUI_INTEGRATION.md  CONTENT_GENERATION_FIXES.md  CONTENT_GENERATION_FIXES_SUMMARY.md  CONTENT_GENERATION_FIX_SUMMARY.md  CONTENT_REUSE_EFFICIENCY.md  CONTRIBUTING.md  COPILOT_INTEGRATION.md  DATABASE_MANAGEMENT_IMPLEMENTATION.md  DEPRECATION_FIX_SUMMARY.md  DEVELOPMENT_WORKFLOW.md  DIAGNOSTICS_CHAT_IMPLEMENTATION.md  ENHANCED_FALLBACK_TEXT_SUMMARY.md  ENHANCEMENT_COMPLETION_SUMMARY.md  ENHANCEMENT_IMPLEMENTATION.md  ENHANCEMENT_IMPLEMENTATION_COMPLETE.md  (+150 more)
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
admin_panel/: analytics.html  analytics.html.bak  content-view.html  content.html  dashboard.html  diagnostics.html  index.html  persona-editor.html  personas.html  rss.html  rss.html.bak  settings.html  system-monitoring.html
demos/: README.md  __init__.py  demo.py  demo_enhanced_fallback.py  demo_fan_control_manufacturer.py  demo_pytorch_version_check.py
docs/: AI_VIDEO_GENERATION.md  APPEARANCE_LOCKING.md  ENHANCEMENTS_ROADMAP.md  INSTALLATION_ROCM_6.5.md  INTERACTIVE_CONTENT_IMPLEMENTATION.md  JOB_QUEUE_IMPLEMENTATION.md  MI25_COMPATIBILITY.md  MOBILE_APP_SPECIFICATION.md  MULTI_GPU_SETUP.md  OLLAMA_CHAT_SETUP.md  README.md  SENTIMENT_ANALYSIS.md  WEBSOCKET_REALTIME_CHAT.md
docs/api/: ai-models-setup.md
docs/architecture/: acd-impl.md  acd-phase2.md  acd-user-guide.md  acd-vision.md  api-marketplace.md  codebase.md
docs/deployment/: CLOUD_DEPLOYMENT.md  KUBERNETES_DEPLOYMENT.md  local-development.md
docs/getting-started/: installation-scripts.md
docs/guides/: audience-segmentation.md  content-features.md  content-generation-settings.md  database-management.md  domains.md  gpu-load-balancing.md  gpu-monitoring.md  ipmi-credentials.md  mi25-compatibility.md  model-installation.md  nsfw-impl.md  plugin-system.md  pytorch-compat.md  pytorch-versions.md  rss-feeds.md  rss-integration.md  seed-images.md  video-features.md  video-quick-ref.md  vllm-repair.md
docs/integrations/: llama-cpp.md
docs/reference/: best-practices.md
examples/: README.md  __init__.py  example_per_site_nsfw_filtering.py
frontend/public/: admin.html  ai_models_setup.html  ai_models_setup_old.html  edit_modal_demo.html  gallery.html  index.html  persona.html
kubernetes/base/: configmap.yaml  deployment.yaml  ingress.yaml  postgres.yaml  pvc.yaml  redis.yaml  secrets.yaml
plugins/: README.md
plugins/example-api-plugin/: main.py  manifest.json
plugins/example-plugin/: main.py  manifest.json
schemas/: ACD_SCHEMA_v1.0.json
scripts/: README.md  backup.sh  build_llamacpp.sh  install_comfyui_rocm.sh  install_vllm_rocm.sh
scripts/migrations/: README.md  migrate_add_appearance_locking.py  migrate_add_base_images.py  migrate_add_negative_prompt.py  migrate_add_social_media_posts.py
scripts/validation/: README.md  validate_enhancements.py  validate_enhancements_v2.py  validate_sdxl_long_prompt.py  verify_ai_model_detection.py  verify_fixes.sh  verify_sdxl_changes.py
src/: gator.db-shm  gator.db-wal
src/backend/: __init__.py  celery_app.py  exceptions.py
tests/: __init__.py  conftest.py  test_civitai_integration.py  test_gpu_detection.py  test_huggingface_compatibility.py  test_installation_scripts.py  test_mi25_compatibility.py  test_pytorch_compatibility.py  test_update_script.py  test_vllm_install_script.sh
tests/integration/: __init__.py  test_acd_api.py  test_acd_content_generation.py  test_ai_enhancements.py  test_analytics_api.py  test_api_endpoints.py  test_appearance_locking.py  test_content_features.py  test_content_generation_e2e.py  test_content_generation_fix.py  test_content_generation_status.py  test_database_admin_api.py  test_direct_messaging_api.py  test_edit_feature.py  test_fix_dependencies.py  test_fixes.py  test_gator_agent_api.py  test_greenlet_fix_validation.py  test_greenlet_issue.py  test_host_header_configuration.py  test_image_save_issue.py  test_ipmi_credentials.py  test_llamacpp_generation.py  test_llamacpp_integration.py  test_local_image_generation.py  test_ollama_manual.py  test_persona_features.py  test_public_api.py  test_rss_api_endpoints.py  test_sdxl_long_prompt.py  test_seed_image_integration.py  test_set_base_image_fix.py  test_setup_api.py  test_template_enhancement.py  (+1 more)
(+183 files in other folders)
